# fonts66viewer

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
.junie/: guidelines.md
assets/: font_list.toml
snapshots/: main_view_launch-wgpu.sha256
src/: app.rs  asset.rs  data.rs  feature.rs  lib.rs  main.rs  model.rs  prelude.rs  widget.rs
src/data/: font_list.rs  preferences.rs
src/data/font_list/: fake_font_list.rs  font_list_impl.rs
src/data/preferences/: fake_preferences.rs  local_preferences.rs
src/feature/: main.rs  settings.rs  toolbar.rs
src/feature/main/: main_view.rs
src/feature/settings/: checkable_font_list_item.rs  font_list_item.rs  settings_view.rs
src/feature/toolbar/: toolbar.rs
src/model/: font_entry.rs  preferences.rs  sqlite_user_version.rs  x_message.rs
src/widget/: settings_button.rs
tests/: launch.ice
