[package]
name = "fonts66viewer"
description = "Fonts66コンプリートパック Viewer"
version = "0.1.0"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
homepage = "https://github.com/sukawasatoru/fonts66viewer"
repository = "https://github.com/sukawasatoru/fonts66viewer.git"
license = "Apache-2.0"
edition = "2024"

[package.metadata.winres]
LegalCopyright = "Copyright © sukawasatoru"
OriginalFilename = "fonts66viewer.exe"

[target.'cfg(windows)'.build-dependencies]
winres = "=0.1.12"

[dependencies]
anyhow = "=1.0.101"
dotenv = "=0.15.0"
iced = { version = "=0.14.0", features = ["svg", "tokio", "sipper"] }
serde = { version = "=1.0.228", features = ["derive"] }
toml = "=0.9.11"
tracing = "=0.1.44"
tracing-subscriber = "=0.3.22"

[target.'cfg(windows)'.dependencies]
# for icon.
#image = { version = "=0.25.9", default-features = false, features = ["png"] }

[dev-dependencies]
iced_test = "=0.14.0"
